# sqlalchemy-learn

./: README.md  db  deletes.py  inserts.py  main.py  pyproject.toml  querying.py  seed.py  updates.py
models/: base.py  user.py
